- Removed /proc entries from all FE code. This should alleviate issue with change to /proc
  in later Linux kernels.
==================================================================================================
Changes for 3.4  (NOT YET RELEASED)
==================================================================================================
- Bug Fix (1085): Default daqd behavior is to disable md5 checksum file creation
- Bug Fix (1098): Fix EZ_CA_READ/WRITE calls to work with EPICS Sequencer 2.2
- Improve lock-up on model shutdown by removing erroneous printkl() in moduleLoad.c (r4486)
- Added ability to run DAC modules without a preload of the FIFO for lower latency.  This done
  specifically for MIT in RCG V2.8.8, but had not been carried over into RCG V3.x.
- Added support for General Standards 20AO8 DAC module, as was done for branch-3.3 as a test.
- Added auto generation of safe.snap files for models built for the first time.
- Changed IPC error reporting, as requested in Bugzilla 793.
- Added support for Dolphin PCIe network Gen 2 hardware.
- Add ability to inter-connect PCIe (Dolphin) switches between corner and end stations.
	- Deletes need for GeFanuc RFM cards. However, option still remains to use them.
	- Added standalone cdsrfmswitch code into src/pcieswitch directory. 
- Add mx_crc_only process: Required to perform CRC calculations for real-time code when DAQ run
  in a 'standiop' mode.  This is also included in branch-3.0.
- Bug Fix (472): Better framewriter error messages
- Bug Fix (985): Fix daqd for single-machine framebuilder in kernel 3.2
- Bug Fix (1010): Prevent divide-by-zero error in daqd filesys.hh
- Bug Fix (513): Cleanup debug schemes.  Also created separate udp_rcvr files, fixed mx_rcvr header
- Bug Fix (1015): Update daqd,nds build for ldas-tools 2.5
- Add leap second to dataviewer for Dec. 31, 2016
- Bug Fix (1047): EDCU code that supports dual data concentrators was modified to work 
  with new mx_stream introduced in 3.1